Added icons and loading

--- a/src/Morenware/DutilsBundle/Resources/client/app/components/torrentList/torrentActions/torrentActions.html
+++ b/src/Morenware/DutilsBundle/Resources/client/app/components/torrentList/torrentActions/torrentActions.html
@@ -1,43 +1,50 @@
 <div class="torrent-actions">
+    <a ng-show="loading"
+          href="#" class="loading-action action-button pull-left">
+      &nbsp;
+    </a>
+    
+    <a ng-show="torrent.state == 'NEW' || torrent.state == 'COMPLETED_WITH_ERROR' || torrent.state == 'FAILED_DOWNLOAD_ATTEMPT' || torrent.state == 'AWAITING_DOWNLOAD'"
+            ng-click="startDownload(torrent)" class="play-button action-button pull-left" title="Start">
+      &nbsp;
+    </a>
 
-    <button ng-show="torrent.state == 'NEW' || torrent.state == 'COMPLETED_WITH_ERROR' || torrent.state == 'FAILED_DOWNLOAD_ATTEMPT' || torrent.state == 'AWAITING_DOWNLOAD'"
-            ng-click="startDownload(torrent)" class="btn btn-sm btn-primary pull-left">
-      Start
-    </button>
+    <a ng-show="torrent.state !== 'COMPLETED' && torrent.state !== 'NEW'" title="Cancel"
+       ng-click="cancelDownload(torrent)" class="cancel-button action-button pull-left">
+      &nbsp;
+    </a>
 
-    <button ng-show="torrent.state !== 'COMPLETED' && torrent.state !== 'NEW'"
-            ng-click="cancelDownload(torrent)" class="btn btn-sm btn-primary pull-left">
-      Cancel
-    </button>
+    <a ng-show="torrent.state == 'DOWNLOADING'" title="Pause"
+            ng-click="pauseDownload(torrent)" class="pause-button action-button pull-left">
+      &nbsp;
+    </a>
+    <!-- Resume -->
+    <a ng-show="torrent.state == 'PAUSED'"
+            ng-click="resumeDownload(torrent)" class="play-button action-button pull-left">
+     &nbsp;
+   </a>
 
-    <button ng-show="torrent.state == 'DOWNLOADING'"
-            ng-click="pauseDownload(torrent)" class="btn btn-sm btn-primary pull-left">
-      Pause
-    </button>
+    <a ng-show="torrent.state == 'DOWNLOAD_COMPLETED'"
+            ng-click="rename(torrent)" class="rename-button action-button pull-left">
+      &nbsp;
+    </a>
 
-    <button ng-show="torrent.state == 'PAUSED'"
-            ng-click="resumeDownload(torrent)" class="btn btn-sm btn-primary pull-left">
-      Resume
-    </button>
-
-    <button ng-show="torrent.state == 'DOWNLOAD_COMPLETED'"
-            ng-click="rename(torrent)" class="btn btn-sm btn-primary pull-left">
-      Rename
-    </button>
-
-    <button ng-show="torrent.state == 'RENAMING_COMPLETED'"
-            ng-click="fetchSubtitles(torrent)" class="btn btn-sm btn-primary pull-left">
-      Subtitles
-    </button>
+    <a ng-show="torrent.state == 'RENAMING_COMPLETED'"
+            ng-click="fetchSubtitles(torrent)" class="subtitles-button action-button pull-left">
+      &nbsp;
+    </a>
 
     <a ng-show="torrent.magnetLink"
-            href="[[torrent.magnetLink]]" target="_blank" class="btn btn-sm btn-info pull-left">
-      Magnet
+            href="[[torrent.magnetLink]]" target="_blank" class="magnet-link action-button pull-left">
+      &nbsp;
     </a>
 
     <a ng-show="torrent.torrentFileLink"
-            href="[[torrent.torrentFileLink]]" target="_blank" class="btn btn-sm btn-info pull-left">
-      Torrent link
+            href="[[torrent.torrentFileLink]]" target="_blank" class="pull-left">
+      Link
     </a>
+
+
+
 
 </div>
